style.css
@import url('./assets/fonts/Satoshi-Variable');

/*.layout {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: flex-start;
} */

h1, h2, h3, h4, h5, h6 {
    font-family: 'Satoshi', sans-serif;
}

h4 {
    font-style: normal;
    font-weight: 700;
    font-size: 72px;
    line-height: 80px;
    color: #0B24F5;
    margin: auto;
    padding-bottom: 64px;
   text-align: center;
}

h2 {
    font-style: normal;
    font-weight: 900;
    font-size: 32px;
    color: #000000;
    margin: auto;
}

h1, h6 {
    font-style: normal;
    font-weight: 700;
    font-size: 28px;
    color: #0B24F5;
    margin: auto;
}

h3 {
    font-style: normal;
    font-weight: 500;
    font-size: 24px;
    color: #565656;
    margin: auto;
}

h5 {
    font-family: 'Satoshi', sans-serif;
    font-style: normal;
    font-weight: 900;
    font-size: 58px;
    text-align: center;
    color: #EB5577;
    margin: 0;
}

p {
    font-family: 'EB Garamond', serif;
    font-style: normal;
    font-weight: 400;
    font-size: 22px;
    line-height: 32px;
    color: #000000;
    margin-bottom: 18px;
}

.scroll i {
    display: flex;
    flex-direction: column;
    color: #0B24F5;
    text-align: center;
    margin: 5%;
}

.scroll span {
    display: flex;
    flex-direction: column;
    font-family: 'Satoshi', sans-serif;
    font-style: normal;
    font-weight: 900;
    font-size: 16px;
    line-height: 22px;
    color: #0B24F5;
    text-decoration: underline;
    text-align: center;
}

.scroll {
    display: block;
    position: fixed;
    bottom: 10px;
    width: 100%;
    margin: auto;
    animation-duration: 2s;
    animation-iteration-count: infinite;
}

.scroll i {
    margin-bottom: 20px;
}

.bounce-1 {
    animation-name: bounce-1;
    animation-timing-function: linear;
}
@keyframes bounce-1 {
    0%   { transform: translateY(0); }
    50%  { transform: translateY(-40px); }
    100% { transform: translateY(0); }
}

.intro, .tech, .featured-projects, .my-words, .contact {
    display: flex;
    flex-direction: column;
    margin: 20px 24px 0 24px;
    padding-top: 20px;
} 

.top-img {
    display: none;
}

.intro img, .contact img {
    width: 164px;
    height: 164px;
    object-fit: cover;
    object-position: 0 100%;
    border-radius: 100%;
    align-self: center;
    margin: 30px;
}

.intro-text {
    margin: 0;
}

.some-icon i {
    color: #D0D0D0;
    font-size: 32px;
    margin-right: 32px;
}

.fa-linkedin-in, .fa-github, .fa-envelope {
    font-size: fa-2xl;
}

.some-icon i:hover, i:active {
    color: #000000;
}

.tech {
    background-color: #EDFFFF;
    padding: 50px 24px 50px 24px;
    margin: 10% 0 0 0;
}


.HTML {
    color: #ffffff; 
    background-color: #0B24F5; 
    padding: 1px;
}

.JS {
    color: #ffffff; 
    background-color: #EB5577; 
    padding: 1px;
}

.SC {
    color: #ffffff;
    background-color: #6DB486; 
    padding: 1px;
}

.TBA {
    color: #ffffff; 
    background-color: #2483E0;
    padding: 1px;
}

.project {
    justify-items: flex-start;
    margin-bottom: 80px;
}

.project img {
    width: 100%;
    height: 300px;
    object-fit: cover;
    object-position: 0 50%;
}

.project span {
    font-family: 'Satoshi', sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 16px;
    color: #ffffff;
    background-color: #000000;
    padding: 2px 6px 2px 6px;
    margin-right: 4px;
    margin-top: 18px;
}

.btn-code, .btn-demo {
    flex-direction: row;
    font-family: 'Satoshi', sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 20px;
    line-height: 27px;
    padding: 10.5px 16px 10.5px 16px;
    border-radius: 50px;
    margin-top: 24px;
    display: inline-flex;
    background-color: #F5F5F5;
    color: #333333;
    border: none;
    height: 48px;
    width: 200px;
    align-items: center;
}

.btn-code i, .btn-demo i {
    font-size: 32px;
    margin-right: 8px;
}

.btn-code:hover {
    background-color: #EB5577;
    border: none;
    color: #ffffff;
}

.btn-demo:hover {
    background-color: #0B24F5;
    border: none;
    color: #ffffff;
}

.my-words {
    background-color: #FCEDEA;
    margin: 0;
    padding: 50px 24px 50px 24px;
}

.my-words h4 {
    color: #EB5577;
    text-align: center;
}

.my-words span {
    font-family: 'Satoshi', sans-serif;
    font-style: normal;
    font-weight: 900;
    font-size: 20px;
    line-height: 27px;
    color: #EB5577;
    padding-top: 10%;
}

.btn-article {
    flex-direction: row;
    font-family: 'Satoshi', sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 20px;
    line-height: 27px;
    padding: 10.5px 16px 10.5px 16px;
    border-radius: 50px;
    margin-top: 24px;
    display: inline-flex;
    background-color: #F5F5F5;
    color: #333333;
    border: none;
    height: 48px;
    align-items: center;
    white-space: nowrap;
}

.btn-article img {
    height: 26px;
    padding-right: 8px;
}

.btn-article:hover {
    background-color: #FFD338;
}

.post {
    margin-bottom: 98px;
}

.post img {
    width: 100%;
}

.skills {
    display: flex;
    flex-direction: column;
    background-color: #FDF2E4;
    margin: 0 auto;
    padding: 80px;
    justify-content: center;
}

.skills span {
    display: inline-flex;
    font-family: 'Satoshi', sans-serif;
    font-style: normal;
    font-weight: 700;
    font-size: 24px;
    line-height: 32px;
    color: #FFFFFF;
    text-align: center;
    margin: 16px;
}

.skills p {
    text-align: center;
    margin: 4px;
}

.code-group, .toolbox-group, .more-group, .upcoming-group {
    margin-top: 60px;
    align-self: center;
}

.more-group {
    display: flex;
    flex-direction: column;
}

.code {
    background-color: #EB5577;
    padding: 2px;
    justify-self: center;
}

.toolbox {
    background-color: #2483E0;
    padding: 2px;
    justify-self: center;
}


.more {
    background: #0B24F5;
    justify-content: center;
}

.upcoming {
    background: #6DB486;
    padding: 2px;
    justify-self: center;
}

.contact {
    display: flex;
    flex-direction: column;
    justify-items: center;
    margin: 0 24px 200px 24px;
    padding: 0;
}

.contact img {
    align-self: flex-start;
}

.contact a {
    font-family: 'Satoshi', sans-serif;
    font-style: normal;
    font-weight: 900;
    font-size: 24px;
    color: #000000;
    text-decoration: none;
}

address {
    margin-top: 50px;
    margin-bottom: 80px;
    align-self: flex-start;
}

@media only screen and (min-width: 600px) and (max-width: 991px) {

.top-img {
    display: flex;
    flex-direction: column;
    width: 100%;
}

.intro, .tech {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    grid-template-rows: auto;
    gap: 32px;
}

.intro img {
    align-self: start;
    grid-column: 1/ span 1;
    grid-row: 2;
    margin: 0;
}

.intro-text {
    grid-column: span 4;
    grid-row: 2;
}

.some-icon {
    grid-column: 1 / span 5;
    grid-row: 3;
    margin-top: 50px;

}

.tech h4, p {
    grid-column: 2/span 3;
}

.featured-projects {
    display: flex;
    flex-direction: column;
}

.project {
    display: flex;
    flex-direction: row;  
}

.buttons {
    display: flex;
    flex-direction: row;
    gap: 24px;
}

.project img {
    width: 200px;
    object-fit: cover;
    object-position: 90% 0;
    margin-right: 24px;
}

.my-words {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    flex-wrap: wrap;
}

.post {
    margin: 10%;
}

.skills {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
}

.skills span {
    margin: 0;
    justify-items: start;
}

.skills p {
    text-align: left;
    margin-left: 0;
}

.skills h4 {
    grid-column: 1/ span 5;
}

.code-group, .toolbox-group {
    grid-column: 2/ span 2;
}

.more-group {
    grid-column: 4/ span 2;
    grid-row: 2;
}

.upcoming-group {
    grid-column: 4/ span 2;
    grid-row: 3;
    align-self: start;
}

.contact {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    justify-items: center;
    margin-left: 124px;
    margin-right: 124px;
}

.contact h5 {
    grid-column: span 5;
    justify-self: center;
    font-size: 120px;
}

.contact img {
    grid-column: 1 / span 1;
    align-self: center;
    justify-self: center;
    margin: 0;
}

.contact-text {
    grid-column: span 4;
    align-self: center;
    justify-self: center;
    margin: 0;
}

address, .some-icon {
    grid-column: span 5;
    justify-self: center;
}
}
@media only screen and (min-width: 992px) {

.layout {
    display: flex;
    flex-direction: row-reverse;
    flex-wrap: no-wrap;
    height: 980px;
  }

.top-img {
    display: flex;
    flex-basis: 50%;
    height: 500px;
}

.top-img img {
    max-width: 100%;
    height: 980px;
    object-fit: cover;
    object-position: 10% 0;
}

.intro {
    flex-basis: 50%;
    height: 500px;
    justify-self: flex-start;
    align-self: center;
    display: grid;
    grid-template-columns: repeat(4, 1fr);
}

.intro img {
    grid-column: 1/ span 1;
    align-self: baseline;
}

.intro-text, .some-icon {
    display: block;
    max-width: 100%;
    grid-column: 2/ span 4;
}

.tech {
    display: grid;
    grid-template-columns: repeat(5, 20%);
    align-items: center;
    height: 800px;
    margin: 0;
}

.tech h4 {
    grid-column: 2 / span 1;
    align-self: center;
    vertical-align: center;
}

.tech p {
    grid-column: 3 / span 2;
    align-self: center;
}

.featured-projects {
    display: flex;
    flex-direction: column;
    justify-items: center;
    align-items: center;
    padding: 0px;
    margin: 120px 120px 0 120px;
}

.project {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: flex-start;
    width: 60%;
}

.project img {
    width: 300px;
    height: 300px;
    object-fit: cover;
    margin-right: 40px;
}

.buttons {
    display: flex;
    flex-direction: row;
    gap: 24px;
}

.my-words {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    gap: 32px;
    justify-content: center;
}

.my-words h4 {
    grid-column: 1 / span 6;
} 

.post {
    grid-column: span 2;
    justify-self: center;   
}

.skills {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    column-gap: 66px;
    justify-content: center;
}

.skills h4 {
    grid-column: 1 / span 6;
}

.skills span {
    margin: 0;
    justify-items: start;
}

.skills p {
    text-align: left;
    margin-left: 0;
}

.code-group, .toolbox-group, .more-group, .upcoming-group {
    grid-column: span 1;
    align-self: baseline;
    justify-self: start;   
}

.contact {
    display: grid;
    grid-template-columns: repeat(7, 1fr);
    justify-content: center;
    align-items: center;
}

.contact h5 {
    grid-column: span 7;
    justify-self: center;
    font-size: 120px;
    margin: 50px;
}

.contact img {
    grid-column: 3 / span 1;
    grid-row: 2;
    align-self: center;
    justify-self: center;
    margin: 0 auto;
}

.contact-text {
    grid-column: 3 / span 4;
    grid-row: 2;
    align-self: center;
    justify-self: center;
    margin: 0;
}

address, .some-icon {
    grid-column: span 7;
    justify-self: center;
}

}

